--- a/MerlionPortal/MerlionPortal-war/web/wms/createtransportorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/createtransportorder.xhtml
@@ -151,13 +151,13 @@
                             </p:column>                       
                         </p:row>
 
-
-                        <br></br>
                     </p:panelGrid>
-                    <p:messages id="messages" autoUpdate="true" closable="true" />
-                    <p:commandButton id="btn" value="Create Transport Order" update="formMain" action="#{transportOrderManagedBean.createTransportOrder()}" ajax="true" >
-                    </p:commandButton>
+                    <h:panelGrid columns="1">
+                        <p:messages id="messages" autoUpdate="true" closable="true" /><p:spacer width="40" height="20" />
 
+                        <p:commandButton id="btn" value="Create Transport Order" update="formMain" action="#{transportOrderManagedBean.createTransportOrder()}" ajax="true" >
+                        </p:commandButton>
+                    </h:panelGrid>
                 </p:panel>
             </h:form>
         </ui:define>
