--- a/MerlionPortal/MerlionPortal-war/web/wms/addnewwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addnewwarehouse.xhtml
@@ -144,10 +144,11 @@
                         </p:row>
 
                     </p:panelGrid>
-                    <p:messages id="messages" autoUpdate="true" closable="true" />
-                    <p:commandButton id="btn" value="Create New Warehouse" update="formMain" actionListener="#{createWarehouseManagedBean.createNewWarehouse}" ajax="true" >
-                    </p:commandButton>
-
+                    <h:panelGrid columns="1">
+                        <p:messages id="messages" autoUpdate="true" closable="true" /><p:spacer width="40" height="20" />
+                        <p:commandButton id="btn" value="Create New Warehouse" update="formMain" actionListener="#{createWarehouseManagedBean.createNewWarehouse}" ajax="true" >
+                        </p:commandButton>
+                    </h:panelGrid>
                 </p:panel>
             </h:form>
         </ui:define>
