--- a/MerlionPortal/MerlionPortal-war/web/wms/addstoragebin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addstoragebin.xhtml
@@ -152,8 +152,10 @@
 
                         </p:row>
                     </p:panelGrid>
-                    <p:messages id="messages" autoUpdate="true" closable="true" />
-                    <p:commandButton id="btn" value="Create New Storage Bin" update="panel" actionListener="#{createStorageBinManagedBean.createStorageBin}" ajax="true" />
+                    <h:panelGrid columns="1">
+                        <p:messages id="messages" autoUpdate="true" closable="true" /><p:spacer width="40" height="20" />
+                        <p:commandButton id="btn" value="Create New Storage Bin" update="panel" actionListener="#{createStorageBinManagedBean.createStorageBin}" ajax="true" />
+                    </h:panelGrid>
                 </p:panel>
 
             </h:form>
