--- a/MerlionPortal/MerlionPortal-war/web/wms/addwarehousezone.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addwarehousezone.xhtml
@@ -107,10 +107,11 @@
                                 </p:inputText>
                             </p:column>
                         </p:row>  
-
                     </p:panelGrid>
-                    <p:messages id="messages" autoUpdate="true" closable="true" />
-                    <p:commandButton id="btn" value="Create New Warehouse Zone" update="panel" actionListener="#{createWarehouseZoneManangedBean.createNewWarehouseZone(warehouse)}" ajax="true" />
+                    <h:panelGrid columns="1">
+                        <p:messages id="messages" autoUpdate="true" closable="true" /><p:spacer width="40" height="20" />
+                        <p:commandButton id="btn" value="Create New Warehouse Zone" update="panel" actionListener="#{createWarehouseZoneManangedBean.createNewWarehouseZone(warehouse)}" ajax="true" />
+                    </h:panelGrid>
                 </p:panel>
             </h:form>
         </ui:define>
