--- a/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
@@ -21,7 +21,7 @@
         </ui:define>
 
         <ui:define name="left">
-            <p:panelMenu>
+            <p:menu styleClass="menu-width">
                 <p:submenu label =" WMS HOME" styleClass="display:block">
                     <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender"/>
                 </p:submenu>
@@ -60,7 +60,7 @@
                 <p:submenu label="View Notification" >
                     <p:menuitem value="View Notification" url="viewallnotification.xhtml" />
                 </p:submenu>
-            </p:panelMenu>
+            </p:menu>
         </ui:define>
 
         <ui:define name="right">
